@@ -2,6 +2,7 @@ package sales.sysconp.microservice.modules.project.property.infrastructure.repos
 
 import org.springframework.stereotype.Repository;
 import sales.sysconp.microservice.modules.project.property.application.ports.out.PropertyRepositoryOutPort;
+import sales.sysconp.microservice.modules.project.property.domain.enums.PropertyStatusEnum;
 import sales.sysconp.microservice.modules.project.property.domain.mappers.PropertyMapper;
 import sales.sysconp.microservice.modules.project.property.domain.models.PropertyModel;
 
@@ -9,6 +10,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Repository
 public class PropertyRepositoryAdapter implements PropertyRepositoryOutPort {
@@ -34,28 +36,28 @@ public class PropertyRepositoryAdapter implements PropertyRepositoryOutPort {
     public List<PropertyModel> getPropertiesByProjectId(Long projectId) {
         return jpaRepository.findByProjectId(projectId).stream()
                 .map(propertyMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<PropertyModel> getPropertiesByCollectionId(Long collectionId) {
         return jpaRepository.findByCollectionId(collectionId).stream()
                 .map(propertyMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<PropertyModel> getPropertiesByStreetId(Long streetId) {
         return jpaRepository.findByStreetId(streetId).stream()
                 .map(propertyMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<PropertyModel> getPropertiesByPropertyCategoryId(Long propertyCategoryId) {
         return jpaRepository.findByPropertyCategoryId(propertyCategoryId).stream()
                 .map(propertyMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -66,6 +68,15 @@ public class PropertyRepositoryAdapter implements PropertyRepositoryOutPort {
     @Override
     public Optional<PropertyModel> getPropertyByIdAndProjectId(Long id, Long projectId) {
         return jpaRepository.findByIdAndProjectId(id, projectId).map(propertyMapper::toModel);
+    }
+
+    @Override
+    public List<PropertyModel> saveAll(List<PropertyModel> propertyModels) {
+        return jpaRepository.saveAll(propertyModels.stream()
+                .map(propertyMapper::toEntity)
+                .toList()).stream()
+                .map(propertyMapper::toModel)
+                .toList();
     }
 
     @Override
@@ -81,5 +92,12 @@ public class PropertyRepositoryAdapter implements PropertyRepositoryOutPort {
     @Override
     public void delete(PropertyModel propertyModel) {
         jpaRepository.delete(propertyMapper.toEntity(propertyModel));
+    }
+
+    @Override
+    public List<PropertyModel> getPropertiesByStatusAndProjectId(PropertyStatusEnum status, Long projectId) {
+        return jpaRepository.findByStatusAndProjectId(status, projectId).stream()
+                .map(propertyMapper::toModel)
+                .toList();
     }
 }
